# c-tiktoken

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
examples/: count_tokens.c  encode_decode.c
include/tiktoken/: arena.h  base64.h  bpe.h  bytes.h  encoding.h  hash.h  regex.h  tiktoken.h  vocab.h
src/: arena.c  base64.c  bpe.c  bytes.c  encoding.c  hash.c  regex.c  vocab.c
tests/: test_base64.c  test_bpe.c  test_bytes.c  test_encoding.c  test_hash.c  test_integration.c  test_regex.c  test_vocab.c  tiktoken_reference.py
tutorial/: chapter01_base64.md  chapter02_bytestrings.md  chapter03_hashmap.md  chapter04_bpe.md  chapter05_regex.md  chapter06_vocab.md  chapter07_api.md  chapter08_integration.md
